force-app/main/default/objects/ACME_LeadScoringRule__mdt/ACME_LeadScoringRule__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type for Lead Scoring Rules</description>
    <label>Lead Scoring Rule</label>
    <pluralLabel>Lead Scoring Rules</pluralLabel>
</CustomObject>