force-app/main/default/objects/ACME_LeadScoringRule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active Rule</label>
    <type>Checkbox</type>
</CustomField>