force-app/main/default/objects/ACME_LeadScoringRule__mdt/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Scoring criteria for lead evaluation</description>
    <label>Scoring Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Size</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>