force-app/main/default/objects/ACME_LeadScoringRule__mdt/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Scoring Metric</label>
    <type>Text</type>
    <length>255</length>
</CustomField>