force-app/main/default/objects/ACME_LeadScoringRule__mdt/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Scoring Threshold</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>