force-app/main/default/objects/ACME_LeadScoringRule__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Scoring weight for the criteria</description>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>